--- a/config/content.htm
+++ b/config/content.htm
@@ -184,5 +184,16 @@ end</pre>
 <p>請從 <a href="https://github.com/mdecourse/scenes">https://github.com/mdecourse/scenes</a> 與 <a href="https://github.com/mdecourse/models">https://github.com/mdecourse/models</a> 中選擇場景或模型, 配合 <a href="https://drive.google.com/file/d/1xb1Es8N-FxeG10OSnLNDwwi_tXyNTP9t/view?usp=sharing">cad2021_textbook.pdf</a> (登入 @gm 帳號後下載) 教材中的內容, 自選製作與組立產品, 組合成一個 Flexible Manufacturing System 系統場景.</p>
 <p>彈性製造系統內容說明</p>
 <h4>範例:</h4>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2qc0-yTXBts" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PDSmRPh6TaM" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/2qc0-yTXBts" title="YouTube video player" width="560"></iframe><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/PDSmRPh6TaM" title="YouTube video player" width="560"></iframe></p>
+<h1>每周進度</h1>
+<h2>w1</h2>
+<p>建立倉儲</p>
+<p><span>建立可攜系統及建立 cad2021_hw 倉儲與網站</span></p>
+<p><span>影片:</span></p>
+<p><span>建立可攜系統</span></p>
+<p><span><a href="https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view">https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view</a></span></p>
+<p><span>建立 cad2021_hw 倉儲與網站</span></p>
+<p><span><a href="https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view">https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view</a></span></p>
+<p><span>51號同學的詳細步驟</span></p>
+<p><span><a href="https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html">https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html</a></span></p>
+<p><span></span></p>
