--- a/content/w1.html
+++ b/content/w1.html
@@ -139,17 +139,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">CAD2 操作流程 << <a href='CAD2 操作流程.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1<br /><h1>運動場景</h1>
-<h4>CAD1:</h4>
-<p style="padding-left: 30px;">CAD1 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD1 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD1 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
-<h4>CAD2:</h4>
-<p style="padding-left: 30px;">CAD2 零件轉出後轉入 CoppeliaSim 操作影片 (Youtube)</p>
-<p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
-<p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
-<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<br />CAD2 操作流程 << <a href='CAD2 操作流程.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <br /><h1>w1</h1>
+<p>建立倉儲</p>
+<p><span>建立可攜系統及建立 cad2021_hw 倉儲與網站</span></p>
+<p><span>影片:</span></p>
+<p><span>建立可攜系統</span></p>
+<p><span><a href="https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view">https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view</a></span></p>
+<p><span>建立 cad2021_hw 倉儲與網站</span></p>
+<p><span><a href="https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view">https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view</a></span></p>
+<p><span>51號同學的詳細步驟</span></p>
+<p><span><a href="https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html">https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html</a></span></p>
+<p><span></span></p><br />每周進度 << <a href='每周進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
