--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -188,3 +188,15 @@ end</pre>
 <h1>每周進度</h1>
 <h2>w1</h2>
 <p>建立倉儲</p>
+<p><span>建立可攜系統及建立 cad2021_hw 倉儲與網站</span></p>
+<p><span>影片:</span></p>
+<p><span>建立可攜系統</span></p>
+<p><span><a href="https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view">https://drive.google.com/file/d/1L-xJKNUIL8tc8nxBH6lHN1UzU_ZW2xXw/view</a></span></p>
+<p><span>建立 cad2021_hw 倉儲與網站</span></p>
+<p><span><a href="https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view">https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view</a></span></p>
+<p><span>51號同學的詳細步驟</span></p>
+<p><span><a href="https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html">https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html</a></span></p>
+<br/><br/><span></span>w2
+<p>遠距教學</p>
+<h2>w3</h2>
+<p>wink 建立</p>
