--- a/content/w1.html
+++ b/content/w1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li class='has-children'><a href='CAD1 繪圖.html'>CAD1 繪圖</a><ul class='dropdown'><li><a href='CAD1 安裝配置.html'>CAD1 安裝配置</a><li><a href='CAD1 操作流程.html'>CAD1 操作流程</a></li></ul><li class='has-children'><a href='CAD2 繪圖.html'>CAD2 繪圖</a><ul class='dropdown'><li><a href='CAD2 安裝配置.html'>CAD2 安裝配置</a><li><a href='CAD2 操作流程.html'>CAD2 操作流程</a></li></ul><li><a href='運動場景.html'>運動場景</a></li></ul><li><a href='HW1-1.html'>HW1-1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a><li><a href='Final Project.html'>Final Project</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a><li><a href='w3.html'>w3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <br /><h1>w1</h1>
+    <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
 <p>建立倉儲</p>
 <p><span>建立可攜系統及建立 cad2021_hw 倉儲與網站</span></p>
 <p><span>影片:</span></p>
@@ -149,7 +149,8 @@ img.add_border {
 <p><span><a href="https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view">https://drive.google.com/file/d/1lxhnAPpvUiB-sIuzwxd8q8BQMu7D2iaz/view</a></span></p>
 <p><span>51號同學的詳細步驟</span></p>
 <p><span><a href="https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html">https://40923151.github.io/cad2021_hw/content/W1%20%E5%BB%BA%E7%AB%8B%E5%80%89%E5%84%B2.html</a></span></p>
-<p><span></span></p><br />每周進度 << <a href='每周進度.html'>Previous</a> </div>
+<p><br/><br/></p>
+<br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
