--- a/config/content.htm
+++ b/config/content.htm
@@ -210,9 +210,9 @@ end</pre>
 <p><span>零件尺寸圖</span></p>
 <p><span>Solvespace 3.0</span><span>:</span></p>
 <p><span>鍵1:<a href="/downloads/no1.stl">/downloads/no1.stl</a></span></p>
-<p><span>鍵2:</span></p>
-<p><span>鍵3:</span></p>
-<p><span>鍵4:</span></p>
+<p><span>鍵2:<a href="/downloads/no2.stl">/downloads/no2.stl</a></span></p>
+<p><span>鍵3:<a href="/downloads/no1.stl">/downloads/no1.stl</a></span></p>
+<p><span>鍵4:<a href="/downloads/no2.stl">/downloads/no2.stl</a></span></p>
 <p><span>Onshape<span>:</span></span></p>
 <p><span>鍵1:</span></p>
 <p><span>鍵2:</span></p>
