--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -90,10 +90,15 @@ end</pre>
 <h2>solvespace教學簡介影片</h2>
 <p><span>下載教學:</span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IFsdsiGaZPI" width="560"></iframe></span></p>
-<p><span></span><span>操作流程介紹</span></p>
+<p>操作流程介紹: <a href="https://youtu.be/XSS_J94sDdg">https://youtu.be/XSS_J94sDdg</a></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XSS_J94sDdg" width="560"></iframe></span></p>
+<p><span>零件轉出後轉入 CoppeliaSim 操作:</span><span><a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
 <p><span></span></p>
-<p><span>零件轉出後轉入 CoppeliaSim 操作</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
 <h2>Onshape教學簡介影片</h2>
+<p><span>操作流程介紹: </span><a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></p>
+<p><span>零件轉出後轉入 CoppeliaSim 操作:</span></p>
 <h2>CAD1 繪圖</h2>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 緣起說明與介紹</p>
