--- a/content/solvespace教學簡介影片.html
+++ b/content/solvespace教學簡介影片.html
@@ -142,10 +142,12 @@ img.add_border {
     <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape教學簡介影片.html'>Next</a> >> Onshape教學簡介影片<br /><h1>solvespace教學簡介影片</h1>
 <p><span>下載教學:</span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IFsdsiGaZPI" width="560"></iframe></span></p>
-<p><span></span><span>操作流程介紹:https://youtu.be/XSS_J94sDdg</span></p>
+<p>操作流程介紹: <a href="https://youtu.be/XSS_J94sDdg">https://youtu.be/XSS_J94sDdg</a></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XSS_J94sDdg" width="560"></iframe></span></p>
-<p><span>零件轉出後轉入 CoppeliaSim 操作:https://youtu.be/1O2fT4JT-9U</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p><br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape教學簡介影片.html'>Next</a> >> Onshape教學簡介影片</div>
+<p><span>零件轉出後轉入 CoppeliaSim 操作:</span><span><a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
+<p><span></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape教學簡介影片.html'>Next</a> >> Onshape教學簡介影片</div>
         
     <!-- footer -->
       <div class="container">
