--- a/content/Onshape教學簡介影片.html
+++ b/content/Onshape教學簡介影片.html
@@ -143,7 +143,8 @@ img.add_border {
 <p><span>操作流程介紹: </span><a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></p>
 <p><span>零件轉出後轉入 CoppeliaSim 操作:</span></p>
-<p><span>同樣也是將檔案轉存成STL檔，這裡就不另外拍影片做介紹</span></p><br />solvespace教學簡介影片 << <a href='solvespace教學簡介影片.html'>Previous</a> <a href='CAD1 繪圖.html'>Next</a> >> CAD1 繪圖</div>
+<p><span>同樣也是將檔案轉存成STL檔，這裡就不另外拍影片做介紹</span></p>
+<br />solvespace教學簡介影片 << <a href='solvespace教學簡介影片.html'>Previous</a> <a href='CAD1 繪圖.html'>Next</a> >> CAD1 繪圖</div>
         
     <!-- footer -->
       <div class="container">
