--- a/config/content.htm
+++ b/config/content.htm
@@ -94,12 +94,20 @@ end</pre>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XSS_J94sDdg" width="560"></iframe></span></p>
 <p><span>零件轉出後轉入 CoppeliaSim 操作:</span><span><a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
 <p><span></span></p>
+<p><span></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
-<h2>Onshape教學簡介影片</h2>
+<br/><br/><span>Solvespace.</span>操作流程
+<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
+<p>CAD1 零組件繪圖教學影片 (Wink)</p>
+<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<p></p><h2>Onshape教學簡介影片</h2>
 <p><span>操作流程介紹: </span><a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></p>
 <p><span>零件轉出後轉入 CoppeliaSim 操作:</span></p>
-<p><span>同樣也是將檔案轉存成STL檔，這裡就不另外拍影片做介紹</span></p><h2>CAD1 繪圖</h2>
+<p><span>同樣也是將檔案轉存成STL檔，這裡就不另外拍影片做介紹</span></p>
+<h2>CAD1 繪圖</h2>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 緣起說明與介紹</p>
 <p>請不要直接從找到的 CAD1 套件說明複製貼上, 而是應該要看完各種參考資料後, 重新打字彙整.</p>
