--- a/content/solvespace教學簡介影片.html
+++ b/content/solvespace教學簡介影片.html
@@ -146,8 +146,15 @@ img.add_border {
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XSS_J94sDdg" width="560"></iframe></span></p>
 <p><span>零件轉出後轉入 CoppeliaSim 操作:</span><span><a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
 <p><span></span></p>
+<p><span></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape教學簡介影片.html'>Next</a> >> Onshape教學簡介影片</div>
+<br/><br/><span>Solvespace.</span>操作流程
+<p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
+<p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
+<p>CAD1 零組件繪圖教學影片 (Wink)</p>
+<p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
+<p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<p></p><br />HW1 << <a href='HW1.html'>Previous</a> <a href='Onshape教學簡介影片.html'>Next</a> >> Onshape教學簡介影片</div>
         
     <!-- footer -->
       <div class="container">
