--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -96,13 +96,14 @@ end</pre>
 <p><span></span></p>
 <p><span></span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
-<br/><br/><span>Solvespace.</span>操作流程
+<p><br/><br/><span>Solvespace.</span>操作流程</p>
 <p>CAD1 指各學員所分配到的第一套參數式 CAD 套件, 其中包括 Solidworks, Inventor, NX, Onshape 與 Solvespace.</p>
 <p>CAD1 零組件繪圖操作流程影片 (Youtube)</p>
 <p>CAD1 零組件繪圖教學影片 (Wink)</p>
 <p>CAD1 零組件繪圖教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020<span> </span></span>零組件繪圖教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.<br/></span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
-<p></p><h2>Onshape教學簡介影片</h2>
+<p></p>
+<h2>Onshape教學簡介影片</h2>
 <p><span>操作流程介紹: </span><a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></p>
 <p><span>零件轉出後轉入 CoppeliaSim 操作:</span></p>
@@ -160,6 +161,21 @@ end</pre>
 <p style="padding-left: 30px;">CAD2 零件轉入 CoppeliaSim 教學影片 (Wink)</p>
 <p style="padding-left: 30px;">CAD2 轉入 Coppeliasim 教學影片 embedded 影片: 標題必須為「<span style="background-color: #ffff99;">NFU - MDE - cad2021 - 學號 - SW2020 </span>零件轉入 CoppeliaSim 教學影片」且加上<span style="background-color: #ccffcc;">語音說明</span>與<span style="background-color: #ccffcc;">字幕.</span></p>
 <p>若使用 Solidworks 2017 版, 則將 SW2020 換為 SW2017, 其他套件 INV2020 代表 AutoDesk Inventor 2020 版, 還有 Onshape 與 Solvespace 等套件名稱.</p>
+<p></p>
+<h2>H2</h2>
+<p>W13</p>
+<p>請在個人的 cad2021_hw 網站中的 HW1 最下方新增一個 H2 的頁面, 標題為 W13 (W 為大寫), 主要查驗個人 meArm 作業所完成的項目:</p>
+<ol>
+<li>
+<p>請建立一個 Wink 檔案說明截至目前所完成的兩套 CAD 零組件繪圖進度 (30%).</p>
+</li>
+<li>
+<p>請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂第一軸, 加入<span> </span><a class="link" href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm" rel="nofollow noopener noreferrer" target="_blank">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a><span> </span>slider, 可以在執行時, 利用滑鼠拖動旋轉 360 度 (30%).</p>
+</li>
+<li>
+<p>請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂其中的 1 ~ 3 軸 (夾爪除外), 加入 UI 介面 slider, 可以在執行時, 利用滑鼠拖動在各軸的極限位置旋轉 (40%).</p>
+</li>
+</ol>
 <h1>HW1-1</h1>
 <p>HW1-1 佔學期成績 15%</p>
 <p><span style="background-color: #ffff99;">HW1-1 必須在 2021.12.01 22:00 之前完成.<br/></span></p>
