--- a/content/W13.html
+++ b/content/W13.html
@@ -152,8 +152,9 @@ img.add_border {
 <li>
 <p>請建立一個 Wink 檔案, 將 1. 已經完成的 meArm 機械手臂其中的 1 ~ 3 軸 (夾爪除外), 加入 UI 介面 slider, 可以在執行時, 利用滑鼠拖動在各軸的極限位置旋轉 (40%).</p>
 </li>
-</ol>
-<br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
+<li>wink</li>
+<li></li>
+</ol><br />運動場景 << <a href='運動場景.html'>Previous</a> <a href='HW1-1.html'>Next</a> >> HW1-1</div>
         
     <!-- footer -->
       <div class="container">
