--- a/content/期末總結.html
+++ b/content/期末總結.html
@@ -139,7 +139,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">H2 << <a href='H2.html'>Previous</a> <br /><h1>期末總結</h1><br />H2 << <a href='H2.html'>Previous</a> </div>
+    <div id="tipue_search_content">H2 << <a href='H2.html'>Previous</a> <br /><h1>期末總結</h1>
+<p>test</p>
+<p>本學期老師幫每人抽籤分配了各兩樣cad來用，使用coppeliasim</p>
+<p><span>跟學習使用wink工具來製作影片。</span></p>
+<p><span>solvecpace教學 </span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IFsdsiGaZPI" width="560"></iframe></span></p>
+<p><span>oneshape教學 <a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></span><span></span></p>
+<p><span> CoppeliaSim 操作 <a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p><br />H2 << <a href='H2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
