--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -263,4 +263,14 @@ end</pre>
 <p>test</p>
 <p>本學期老師幫每人抽籤分配了各兩樣cad來用，使用coppeliasim</p>
 <p><span>跟學習使用wink工具來製作影片。</span></p>
-<p><span></span></p>
+<p><span>solvecpace教學 </span><span><a href="https://youtu.be/IFsdsiGaZPI">https://youtu.be/IFsdsiGaZPI</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IFsdsiGaZPI" width="560"></iframe></span></p>
+<p><span>oneshape教學 <a href="https://youtu.be/6g_wlwlXjPE">https://youtu.be/6g_wlwlXjPE</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6g_wlwlXjPE" width="560"></iframe></span><span></span></p>
+<p><span> CoppeliaSim 操作 <a href="https://youtu.be/1O2fT4JT-9U">https://youtu.be/1O2fT4JT-9U</a></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/1O2fT4JT-9U" width="560"></iframe></span></p>
+<p>meARM</p>
+<p><img alt="" height="285" src="/images/螢幕擷取畫面 2021-12-13 094906.png" width="508"/></p>
+<p>oneshape繪製</p>
+<p><span><img alt="" height="677" src="/images/螢幕擷取畫面 2022-01-08 222224.png" width="1482"/></span></p>
+<p></p>
